Bugs repair on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -136,6 +136,7 @@
   flex-wrap: wrap;
   flex-direction: row;
     align-items: center;
+    margin-top: 80px;
   }
 
   .welcome {
@@ -362,7 +363,7 @@
     margin: 0 100px;
   }
 
-
+/* Mobile */
 @media (max-width: 1000px){
   *  {
       margin: 0;
@@ -392,6 +393,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: -20px;
   }
 
   h1 {
